Mon Aug 18 22:41:46 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (id_encode): removed.

Mon Aug 18 22:30:07 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (make_writeconv): if enc and enc2 is set, convert
	  string.encoding to enc2.

	* include/ruby/io.h: comment changed.

Mon Aug 18 21:02:08 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/io.h (rb_io_t): new fields: writeconv,
	  writeconv_stateless and writeconv_initialized.
	  (MakeOpenFile): initialize them.

	* include/ruby/encoding.h (rb_econv_stateless_encoding): declared.
	  (rb_econv_string): declared.

	* io.c (make_writeconv): new function.
	  (io_fwrite): use econv.
	  (make_readconv): fix error message.
	  (finish_writeconv): new function.
	  (fptr_finalize): call finish_writeconv.
	  (clear_writeconv): new function.
	  (clear_codeconv): new function to call both clear_readconv and
	  clear_writeconv.
	  (rb_io_fptr_finalize): call clear_codeconv instead of
	  clear_readconv.
	  (mode_enc): ditto.
	  (io_set_encoding): ditto.
	  (argf_next_argv): ditto.
	  (io_encoding_set): ditto.

	* gc.c (gc_mark_children): mark writeconv_stateless in T_FILE.

	* transcode.c (stateless_encoding_i): new function.
	  (rb_econv_stateless_encoding): ditto.
	  (rb_econv_string): ditto.

Mon Aug 18 17:23:38 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (clear_readconv): extracted from rb_io_fptr_finalize.
	  (mode_enc): call clear_readconv.
	  (io_set_encoding): ditto.
	  (argf_next_argv): ditto.
	  (io_encoding_set): ditto.

Mon Aug 18 16:54:06 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (mode_enc): modify enc and enc2 consistently.
	  (io_set_encoding): ditto.
	  (io_encoding_set): ditto.

Mon Aug 18 13:21:38 2008  Tanaka Akira  <akr@fsij.org>

	* transcode.c (transcode_search_path): prevent infinite loop by
	  searching a path for self conversion.

Mon Aug 18 12:45:24 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (io_enc_str): code conversion removed.
	  (io_enc_str_converted): removed because it is identical to